[tables]-[bug]: not wrapping
- table elements don't wrap, make the page scroll-x on mobile
- affects `introduction`, `typography`, `input`

--- a/scss/base/_table.scss
+++ b/scss/base/_table.scss
@@ -26,17 +26,25 @@ table {
     }
   }
 
-   > tbody > tr > td,
-   > tbody > tr > th, 
-   > tfoot > tr > td, 
-   > tfoot > tr > th, 
-   > thead > tr > td,
-   > thead > tr > th {
+  > tbody > tr > td,
+  > tbody > tr > th, 
+  > tfoot > tr > td, 
+  > tfoot > tr > th, 
+  > thead > tr > td,
+  > thead > tr > th {
     padding: 10px;
     vertical-align: middle;
     border-bottom: 1px solid $lego-gray-2;
-  }
 
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+
+    @media #{$phone} {
+      display: block;
+    }
+  }
   ////// Striped ///////
 
   &.table--stripe tbody tr:nth-child(odd) td {
